@@ -8823,7 +8823,7 @@ static MagickPassFail WritePNGImage(const ImageInfo *image_info,Image *image)
 
 /* Write one JNG image */
 static MagickPassFail WriteOneJNGImage(MngInfo *mng_info,
-                                     const ImageInfo *image_info,Image *image)
+                                       const ImageInfo *image_info,Image *image)
 {
   Image
     *jpeg_image;
@@ -8855,11 +8855,22 @@ static MagickPassFail WriteOneJNGImage(MngInfo *mng_info,
   logging=LogMagickEvent(CoderEvent,GetMagickModule(),
                          "  enter WriteOneJNGImage()");
 
-  if (image->columns > 65535 || image->rows > 65535)
+  if (image->columns > 65500U)
     {
       (void) LogMagickEvent(CoderEvent,GetMagickModule(),
-                              "  JNG dimensions too large");
-      ThrowWriterException(ResourceLimitError,MemoryAllocationFailed,
+                            "  JNG dimensions too large"
+                            " (%lu columns exceeds limit of 65500)",
+                            image->columns);
+      ThrowWriterException(CoderError,UnsupportedNumberOfColumns,
+                             image);
+    }
+  if (image->rows > 65500U)
+    {
+      (void) LogMagickEvent(CoderEvent,GetMagickModule(),
+                              "  JNG dimensions too large"
+                            " (%lu rows exceeds limit of 65500)",
+                            image->rows);
+      ThrowWriterException(CoderError,UnsupportedNumberOfRows,
                              image);
     }
 
@@ -9305,6 +9316,14 @@ static MagickPassFail WriteOneJNGImage(MngInfo *mng_info,
                           "  Creating blob.");
   blob=(char *) ImageToBlob(jpeg_image_info,jpeg_image,&length,
                             &image->exception);
+  if (blob == (char *) NULL)
+    {
+      if (jpeg_image != (Image *)NULL)
+        DestroyImage(jpeg_image);
+      if (jpeg_image_info != (ImageInfo *)NULL)
+        DestroyImageInfo(jpeg_image_info);
+      return MagickFail;
+    }
   if (logging)
     {
       (void) LogMagickEvent(CoderEvent,GetMagickModule(),
@@ -9414,7 +9433,6 @@ static MagickPassFail WriteJNGImage(const ImageInfo *image_info,Image *image)
   status=WriteOneJNGImage(mng_info,image_info,image);
   CloseBlob(image);
 
-  (void) CatchImageException(image);
   MngInfoFreeStruct(mng_info,&have_mng_structure);
   if (logging)
     (void) LogMagickEvent(CoderEvent,GetMagickModule(),"exit WriteJNGImage()");
